Add GitHub Actions workflow for lexical graph release and update versioning in pyproject.toml

--- a/.github/workflows/lexical-graph-release.yml
+++ b/.github/workflows/lexical-graph-release.yml
@@ -36,11 +36,6 @@ jobs:
       - name: Build package
         run: .venv/bin/python -m build
 
-      - name: Create latest dist copies
-        run: |
-          cp dist/*.whl dist/lexical-graph-latest.whl
-          cp dist/*.tar.gz dist/lexical-graph-latest.tar.gz
-
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
         with:
@@ -48,65 +43,12 @@ jobs:
           path: lexical-graph/dist/
           retention-days: 30
 
-      - name: Extract version
-        id: version
-        run: |
-          if [[ "$GITHUB_REF" == refs/tags/* ]]; then
-            VERSION="${GITHUB_REF_NAME#lexical-graph/}"
-          else
-            VERSION="v$(grep '^version = ' pyproject.toml | sed 's/version = "\(.*\)"/\1/')"
-          fi
-          echo "version=${VERSION}" >> $GITHUB_OUTPUT
-
-      - name: Update pip install version in lexical-graph notebooks
-        working-directory: examples/lexical-graph/notebooks
-        run: python3 -c "import re; v='${{ steps.version.outputs.version }}'; nb=open('00-Setup.ipynb').read(); updated=re.sub(r'/refs/tags/v[^#]+\.zip','/refs/tags/'+v+'.zip',nb); assert updated!=nb,'No match in 00-Setup.ipynb'; open('00-Setup.ipynb','w').write(updated); print('Updated to',v)"
-
-      - name: Zip lexical-graph notebooks
-        working-directory: examples/lexical-graph/notebooks
-        run: |
-          zip lexical-graph-examples.zip *.ipynb
-          cp lexical-graph-examples.zip lexical-graph-examples-latest.zip
-
-      - name: Upload lexical-graph-examples.zip
-        uses: actions/upload-artifact@v4
-        with:
-          name: lexical-graph-examples
-          path: |
-            examples/lexical-graph/notebooks/lexical-graph-examples.zip
-            examples/lexical-graph/notebooks/lexical-graph-examples-latest.zip
-          retention-days: 30
-
-      - name: Update pip install version in lexical-graph-hybrid-dev notebooks
-        working-directory: examples/lexical-graph-hybrid-dev/notebooks
-        run: python3 -c "import re; v='${{ steps.version.outputs.version }}'; nb=open('00-Setup.ipynb').read(); updated=re.sub(r'/refs/tags/v[^#]+\.zip','/refs/tags/'+v+'.zip',nb); assert updated!=nb,'No match in 00-Setup.ipynb'; open('00-Setup.ipynb','w').write(updated); print('Updated to',v)"
-
-      - name: Zip lexical-graph-hybrid-dev notebooks
-        working-directory: examples/lexical-graph-hybrid-dev/notebooks
-        run: |
-          zip lexical-graph-hybrid-dev-examples.zip *.ipynb
-          cp lexical-graph-hybrid-dev-examples.zip lexical-graph-hybrid-dev-examples-latest.zip
-
-      - name: Upload lexical-graph-hybrid-dev-examples.zip
-        uses: actions/upload-artifact@v4
-        with:
-          name: lexical-graph-hybrid-dev-examples
-          path: |
-            examples/lexical-graph-hybrid-dev/notebooks/lexical-graph-hybrid-dev-examples.zip
-            examples/lexical-graph-hybrid-dev/notebooks/lexical-graph-hybrid-dev-examples-latest.zip
-          retention-days: 30
-
       # Automatically create a GitHub Release when a new tag is pushed
       - name: Create GitHub Release
         if: startsWith(github.ref, 'refs/tags/')
         uses: softprops/action-gh-release@v2
         with:
-          files: |
-            lexical-graph/dist/*
-            examples/lexical-graph/notebooks/lexical-graph-examples.zip
-            examples/lexical-graph/notebooks/lexical-graph-examples-latest.zip
-            examples/lexical-graph-hybrid-dev/notebooks/lexical-graph-hybrid-dev-examples.zip
-            examples/lexical-graph-hybrid-dev/notebooks/lexical-graph-hybrid-dev-examples-latest.zip
+          files: lexical-graph/dist/*
           generate_release_notes: true
           prerelease: >-
             ${{
